--- a/_config.yml
+++ b/_config.yml
@@ -293,3 +293,16 @@ defaults:
       comments: # true
       share: true
       related: true
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: false
+      read_time: false
+      comments: # true
+      share: false
+      related: true
+      header:
+        teaser: ""
