--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,8 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  - title: "About"
+    url: https://joe-rodgers.github.io/about/
+  - title: "Contact"
+    url: https://joe-rodgers.github.io/contact/
+  - title: "Posts"
+    url: https://joe-rodgers.github.io/posts/
