--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,4 +5,4 @@ main:
   - title: "Contact"
     url: https://joe-rodgers.github.io/contact/
   - title: "Posts"
-    url: https://joe-rodgers.github.io/posts/
+    url: https://joe-rodgers.github.io/categories/posts/
