--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,3 +6,5 @@ main:
     url: https://joe-rodgers.github.io/contact/
   - title: "Posts"
     url: https://joe-rodgers.github.io/categories/posts/
+  - title: "Side Notes"
+    url: https://jrjr.posthaven.com/
