--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,9 @@ main:
     url: https://joe-rodgers.github.io/about/
   - title: "Contact"
     url: https://joe-rodgers.github.io/contact/
-  - title: "Side Notes"
+  - title: "WORDS"
+    url: https://bitcoinwords.github.io/
+    - title: "Side Notes"
     url: https://jrjr.posthaven.com/
+  - title: "My Ideas"
+    url: https://listed.to/@joerodgers
