--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,4 +9,4 @@ main:
     - title: "Side Notes"
     url: https://jrjr.posthaven.com/
   - title: "My Ideas"
-    url: https://listed.to/@joerodgers
+    url: https://listed.to/@joerodgers/
