--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,6 @@ main:
     url: https://bitcoinwords.github.io/
   - title: "Side Notes"
     url: https://jrjr.posthaven.com/
-  - title: "My Ideas"
+  - title: "Ideas"
     url: https://listed.to/@joerodgers/
     
